--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: Arial, sans-serif;
+  border: none;
 }
 
 header {
@@ -10,8 +11,9 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 10px;
-  background-color: #222;
+  /* background-color: #222; */
   color: #fff;
+  border-radius: 2rem;
 }
 
 h1 {
@@ -20,39 +22,56 @@ h1 {
 
 #searchBox {
   font-size: 16px;
-  padding: 5px;
+  padding: 1rem 2rem;
+  margin: 0 auto;
+  text-align: left;
   border-radius: 5px;
   border: none;
 }
 
 main {
   display: flex;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
   width: calc(5 * (300px + 20px));
   height: fit-content;
   overflow-x: auto;
-  padding: 10px;
+  padding: 20px;
 }
 
 .tab {
   display: inline-block;
-  padding: 10px;
-  background-color: #f5f5f5;
-  border-radius: 5px;
-  /* box-shadow: 1px 1px 3px rgba(0, 0, 0, 0.3); */
-  opacity: 0.5;
-  transition: opacity 0.3s;
+  padding: 1rem;
+  border-radius: 1.25rem;
+  /* width: 80px; */
+  /* height: 80px; */
+  margin: 0 10px;
+  background-color: #ccc;
 }
 
-.tab:hover {
+.tab.hidden {
+  opacity: 0.25;
+}
+  
+  .focused {
   opacity: 1;
-}
-
-.favicon {
-  width: 32px;
-  height: 32px;
-  margin-right: 5px;
-  image-rendering: -webkit-optimize-contrast;
-  image-rendering: crisp-edges;
-  image-rendering: pixelated;
-}
+  border: 2px solid blue;
+  }
+  
+  /* scrollbar styling */
+  ::-webkit-scrollbar {
+    display: none;
+  height: 10px;
+  }
+  
+  ::-webkit-scrollbar-track {
+  background-color: #f5f5f5;
+  }
+  
+  ::-webkit-scrollbar-thumb {
+  background-color: #888;
+  border-radius: 5px;
+  }
+  
+  ::-webkit-scrollbar-thumb:hover {
+  background-color: #555;
+  }
