--- a/style.css
+++ b/style.css
@@ -3,6 +3,17 @@ body {
   padding: 0;
   font-family: Arial, sans-serif;
   border: none;
+  background-color: rgba(255, 255, 255, 0.5); /* set background color to transparent white */
+  backdrop-filter: blur(100px); /* apply backdrop filter to blur the background */
+}
+
+.container {
+  border-radius: 1rem;
+  margin: 0 auto;
+  width: 100%;
+  height: 100vh;
+  background-color: rgba(39, 39, 39, 0.122); /* set background color to transparent white */
+  backdrop-filter: blur(100px); /* apply backdrop filter to blur the background */
 }
 
 header {
@@ -13,7 +24,7 @@ header {
   padding: 10px;
   /* background-color: #222; */
   color: #fff;
-  border-radius: 2rem;
+  border-radius: 0 0 2rem 2rem;
 }
 
 h1 {
@@ -42,8 +53,7 @@ main {
   display: inline-block;
   padding: 1rem;
   border-radius: 1.25rem;
-  /* width: 80px; */
-  /* height: 80px; */
+  filter: blur(0px);
   margin: 0 10px;
   background-color: #ccc;
 }
