--- a/style.css
+++ b/style.css
@@ -3,17 +3,13 @@ body {
   padding: 0;
   font-family: Arial, sans-serif;
   border: none;
-  background-color: rgba(255, 255, 255, 0.5); /* set background color to transparent white */
-  backdrop-filter: blur(100px); /* apply backdrop filter to blur the background */
+  background: transparent;
 }
 
 .container {
   border-radius: 1rem;
   margin: 0 auto;
-  width: 100%;
-  height: 100vh;
-  background-color: rgba(39, 39, 39, 0.122); /* set background color to transparent white */
-  backdrop-filter: blur(100px); /* apply backdrop filter to blur the background */
+  background-color: #ffffff00; /* set background color to transparent white */
 }
 
 header {
