--- a/style.css
+++ b/style.css
@@ -5,16 +5,19 @@ body {
   border: none;
   background: transparent;
   border-radius: 100px;
-  /* overflow: hidden; */
 }
 
 .container {
   border-radius: 2rem;
   margin: 0 auto;
-  width: 2500px;
+  width: 10500px;
   max-width: max-content;
   height: 50px;
-  background-color: #ffffff00; /* set background color to transparent white */
+  background-color: #ffffff00;
+}
+
+.blur {
+  filter: blur(5px);
 }
 
 h1 {
@@ -32,7 +35,7 @@ h1 {
   border-radius: 5px;
   border: none;
   border-radius: 1rem;
-  z-index: 1; /* ensure the search box appears on top of other elements */
+  z-index: 1;
 }
 
 main {
@@ -44,12 +47,9 @@ main {
 }
 
 .tab {
-  /* background-color: rgba(255, 255, 255, 0.5); */
-  /* backdrop-filter: blur(10px);  */
   display: inline-block;
   padding: 1rem;
   border-radius: 1.25rem;
-  /* filter: blur(0px); */
   margin: 0 10px;
   transition: all 0.2s ease-in-out;
   cursor: pointer;
