--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body {
   background: transparent;
   border-radius: 100px;
   background-color: #000000;
+  /* backdrop-filter: blur(5px); */
 }
 
 .container {
